--- a/package.json
+++ b/package.json
@@ -31,8 +31,11 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@threlte/core": "^6.0.2",
-		"@threlte/extras": "^5.0.4",
+		"@theatre/core": "^0.7.0",
+		"@theatre/studio": "^0.7.0",
+		"@threlte/core": "^6.0.3",
+		"@threlte/extras": "^5.1.0",
+		"@threlte/theatre": "^2.0.0",
 		"daisyui": "^3.5.1",
 		"three": "^0.155.0",
 		"tweakpane": "^4.0.0"
